Version 0.7.4 (pure java not yet working)